--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -3,12 +3,17 @@ version: '>= 0.14.0'
 formatter: markdown table
 
 content: |-
+  [![Tests](https://github.com/terraform-cisco-modules/terraform-intersight-policies-thermal/actions/workflows/terratest.yml/badge.svg)](https://github.com/terraform-cisco-modules/terraform-intersight-policies-thermal/actions/workflows/terratest.yml)
   # Terraform Intersight Policies - Thermal
   Manages Intersight Thermal Policies
   
   Location in GUI:
   `Policies` » `Create Policy` » `Thermal`
   
+  ## Easy IMM
+
+  [*Easy IMM - Comprehensive Example*](https://github.com/terraform-cisco-modules/easy-imm-comprehensive-example) - A comprehensive example for policies, pools, and profiles.
+
   ## Example
 
   ### main.tf
